| Summary: | ASTERISK-24466: app_queue: fix a couple leaks to struct call_queue | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2014-10-28 23:52:11 | Date Closed: | 2014-10-30 18:58:19 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | SVN 11.13.1 12.6.1 13.0.0-beta3 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | {{set_member_value}} has a couple leaks to references in the variable {{q}} found through testsuite {{tests/queues/set_penalty}}. | ||
| Comments: | |||